--- a/_data/projects.json
+++ b/_data/projects.json
@@ -8,20 +8,7 @@
     },
     {
         "name": "Email Clean-Up",
-        "milestones": [
-            {
-                "milestone_date": "2020-01-01",
-                "description": "New Year's Eve Holiday,",
-                "owner": "All",
-                "project_name": "Email Clean-Up"
-            },
-            {
-                "milestone_date": "2020-07-04",
-                "description": "Independence Day (US) Holiday,",
-                "owner": "All",
-                "project_name": "Email Clean-Up"
-            }
-        ],
+        "milestones": [],
         "description": "MailChimp is the email tool of record for the OWASP Foundation. Given the GDPR rules of the EU and the undocumented history of email address imports into MailChimp, this project's aim is to re-validate every address in our system for an opt-in for marketing emails. OWASP should take a leadership position in p[roactively cleansing our email list and ensure voluntary opt-in of addresses.The project will primarily be a series of emails requesting recipients to opt-in to Foundation marketing messages.",
         "leaders": [
             {
@@ -37,6 +24,12 @@
             {
                 "milestone_date": "2019-10-23",
                 "description": "Connect Rebecca and Susan with Project and Chapter leaders for copy",
+                "owner": "Mike",
+                "project_name": "2019Q4 Marketing"
+            },
+            {
+                "milestone_date": "2019-11-15",
+                "description": "Connect Susan to personalities for EOY Campaign",
                 "owner": "Mike",
                 "project_name": "2019Q4 Marketing"
             },
@@ -77,18 +70,6 @@
                 "description": "Contract signed and project underway",
                 "owner": "No Owner",
                 "project_name": "Donation Form"
-            },
-            {
-                "milestone_date": "2020-01-01",
-                "description": "New Year's Eve Holiday,",
-                "owner": "All",
-                "project_name": "Donation Form"
-            },
-            {
-                "milestone_date": "2020-07-04",
-                "description": "Independence Day (US) Holiday, [All]TBD",
-                "owner": "No Owner",
-                "project_name": "Donation Form"
             }
         ],
         "description": "As part of the OWASP website migration, we will creating a new Donation form that will use Stripe as a back end. This should be a simple form that is hosted on the website and will serve as a proof of concept for (1) hosting secure forms on github, (2) test the viability of Stripe for payment processing, and (3) integrating Stripe form activities with light integrations with other key data in the OWASP ecosystem.",
@@ -109,26 +90,14 @@
         "milestones": [
             {
                 "milestone_date": "2019-11-15",
-                "description": "Register volunteers and schedule",
+                "description": "egister volunteers and schedule",
                 "owner": "Lisa",
                 "project_name": "BlackHat London 2019"
             },
             {
                 "milestone_date": "2019-11-18",
-                "description": "Finalize SWAG and handouts with Mike and order",
+                "description": "inalize SWAG and handouts with Mike and order",
                 "owner": "Mike & Lisa",
-                "project_name": "BlackHat London 2019"
-            },
-            {
-                "milestone_date": "2020-01-01",
-                "description": "New Year's Eve Holiday,",
-                "owner": "All",
-                "project_name": "BlackHat London 2019"
-            },
-            {
-                "milestone_date": "2020-07-04",
-                "description": "Independence Day (US) Holiday,",
-                "owner": "All",
                 "project_name": "BlackHat London 2019"
             }
         ],
@@ -221,20 +190,7 @@
     },
     {
         "name": "Events Form",
-        "milestones": [
-            {
-                "milestone_date": "2020-01-01",
-                "description": "New Year's Eve Holiday,",
-                "owner": "All",
-                "project_name": "Events Form"
-            },
-            {
-                "milestone_date": "2020-07-04",
-                "description": "Independence Day (US) Holiday, [All]TBD",
-                "owner": "No Owner",
-                "project_name": "Events Form"
-            }
-        ],
+        "milestones": [],
         "description": "As part of the OWASP website migration, we will creating a new Events form that will use Stripe as a back end. This should be a simple form that is hosted on the website and will serve as the prmiary e-commerce path for all OWASP Global and Regional events replacing Eventbrite for (1) hosting secure forms on github, (2) presenting and then selecting multiple SKUs from a single Product ID as in Training Class A for Event X and Early Bird ticket for Event X, (3) 2-3 aggregate online reports, (4) validate Strike can manage inventory of SKUs, and (5) integrating Stripe form activities with light integrations with other key data in the OWASP ecosystem.",
         "leaders": [
             {
@@ -257,13 +213,13 @@
         "milestones": [
             {
                 "milestone_date": "2019-11-15",
-                "description": "Secure insurance for event per terms of contract (See below),",
+                "description": "Secure insurance for event per terms of contract (See below)",
                 "owner": "Dawn",
                 "project_name": "AppSec California 2020"
             },
             {
                 "milestone_date": "2019-12-20",
-                "description": "Final payment of $22,750 is due. Ticket # OSD-3068,",
+                "description": "Final payment of $22,750 is due. Ticket # OSD-3068",
                 "owner": "Dawn",
                 "project_name": "AppSec California 2020"
             }
@@ -358,20 +314,7 @@
     },
     {
         "name": "ProjectS Summit - Winter 2020",
-        "milestones": [
-            {
-                "milestone_date": "2020-01-01",
-                "description": "New Year's Eve Holiday,",
-                "owner": "All",
-                "project_name": "ProjectS Summit - Winter 2020"
-            },
-            {
-                "milestone_date": "2020-07-04",
-                "description": "Independence Day (US) Holiday,",
-                "owner": "All",
-                "project_name": "ProjectS Summit - Winter 2020"
-            }
-        ],
+        "milestones": [],
         "description": "Each project will have a 2-3 paragraph overview narrative. Keep to the key top points about the project. Visitors should be able to read this short narrative and have a good understanding of the project without having to scroll the entire document.",
         "leaders": [
             {
@@ -386,13 +329,13 @@
         "milestones": [
             {
                 "milestone_date": "2020-01-01",
-                "description": "New Year's Eve Holiday,",
+                "description": "New Year's Eve Holiday",
                 "owner": "All",
                 "project_name": "BlackHat Asia"
             },
             {
                 "milestone_date": "2020-07-04",
-                "description": "Independence Day (US) Holiday,",
+                "description": "Independence Day (US) Holiday",
                 "owner": "All",
                 "project_name": "BlackHat Asia"
             }
@@ -417,31 +360,31 @@
             },
             {
                 "milestone_date": "2019-11-04",
-                "description": "Launch Call for Program Team Members,",
+                "description": "Launch Call for Program Team Members",
                 "owner": "Emily",
                 "project_name": "Global AppSec - Dublin"
             },
             {
                 "milestone_date": "2019-12-01",
-                "description": "Close Call for Program Team Members,",
+                "description": "Close Call for Program Team Members",
                 "owner": "Emily",
                 "project_name": "Global AppSec - Dublin"
             },
             {
                 "milestone_date": "2019-12-02",
-                "description": "Payment 10% of Rental Fee due,",
+                "description": "Payment 10% of Rental Fee due",
                 "owner": "Emily",
                 "project_name": "Global AppSec - Dublin"
             },
             {
                 "milestone_date": "2020-01-06",
-                "description": "Payment 45% of Rental Fee due,",
+                "description": "Payment 45% of Rental Fee due",
                 "owner": "Emily",
                 "project_name": "Global AppSec - Dublin"
             },
             {
                 "milestone_date": "2020-05-15",
-                "description": "Payment 45% of Rental Fee due,",
+                "description": "Payment 45% of Rental Fee due",
                 "owner": "Emily",
                 "project_name": "Global AppSec - Dublin"
             }
@@ -460,13 +403,13 @@
         "milestones": [
             {
                 "milestone_date": "2020-01-01",
-                "description": "New Year's Eve Holiday,",
+                "description": "New Year's Eve Holiday",
                 "owner": "All",
                 "project_name": "Projects Summit Summer"
             },
             {
                 "milestone_date": "2020-07-04",
-                "description": "Independence Day (US) Holiday,",
+                "description": "Independence Day (US) Holiday",
                 "owner": "All",
                 "project_name": "Projects Summit Summer"
             }
@@ -482,20 +425,7 @@
     },
     {
         "name": "BlackHat Las Vegas",
-        "milestones": [
-            {
-                "milestone_date": "2020-01-01",
-                "description": "New Year's Eve Holiday,",
-                "owner": "All",
-                "project_name": "BlackHat Las Vegas"
-            },
-            {
-                "milestone_date": "2020-07-04",
-                "description": "Independence Day (US) Holiday,",
-                "owner": "All",
-                "project_name": "BlackHat Las Vegas"
-            }
-        ],
+        "milestones": [],
         "description": "Each project will have a 2-3 paragraph overview narrative. Keep to the key top points about the project. Visitors should be able to read this short narrative and have a good understanding of the project without having to scroll the entire document.",
         "leaders": [
             {
@@ -507,25 +437,12 @@
     },
     {
         "name": "DEFCON 28",
-        "milestones": [
-            {
-                "milestone_date": "2020-01-01",
-                "description": "New Year's Eve Holiday,",
-                "owner": "All",
-                "project_name": "DEFCON 28"
-            },
-            {
-                "milestone_date": "2020-07-04",
-                "description": "Independence Day (US) Holiday,",
-                "owner": "All",
-                "project_name": "DEFCON 28"
-            }
-        ],
+        "milestones": [],
         "description": "Each project will have a 2-3 paragraph overview narrative. Keep to the key top points about the project. Visitors should be able to read this short narrative and have a good understanding of the project without having to scroll the entire document.",
         "leaders": [
             {
-                "name": "Mike McCamon",
-                "email": "mike.mccamon@owasp.com"
+                "name": "Lisa Jones",
+                "email": "lisa.jones@owasp.com"
             }
         ],
         "url": "https://www2.owasp.org/www-staff/projects/202008-Defcon-28"
@@ -540,15 +457,9 @@
                 "project_name": "Global AppSec - San Francisco"
             },
             {
-                "milestone_date": "2020-01-01",
-                "description": "New Year's Eve Holiday,",
-                "owner": "All",
-                "project_name": "Global AppSec - San Francisco"
-            },
-            {
-                "milestone_date": "2020-07-04",
-                "description": "Independence Day (US) Holiday,",
-                "owner": "All",
+                "milestone_date": "2019-11-10",
+                "description": "Populate Project Page with required content",
+                "owner": "Emily",
                 "project_name": "Global AppSec - San Francisco"
             }
         ],
