remote update file

--- a/_data/projects.json
+++ b/_data/projects.json
@@ -432,7 +432,7 @@
                 "description": "Sign contract",
                 "owner": "Mike",
                 "project_name": "Global AppSec - Dublin",
-                "status": "on-time"
+                "status": "overdue"
             },
             {
                 "milestone_date": "2019-12-01",
